[package]
name = "py2uml"
version = "0.1.0"
edition = "2024"

[dependencies]
walkdir = "2"
ruff_python_parser = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
ruff_python_ast = { git = "https://github.com/astral-sh/ruff.git", tag = "v0.4.10" }
clap = { version = "4.4.7", features = ["derive"] }